--- a/src/main/resources/com/example/demo/Main.fxml
+++ b/src/main/resources/com/example/demo/Main.fxml
@@ -2,11 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="634.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="634.0" prefWidth="1286.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Controller">
    <children>
       <Button fx:id="SearchButton" layoutX="18.0" layoutY="115.0" mnemonicParsing="false" onAction="#SearchButtonEvent" text="Buscar Archivo " textAlignment="CENTER">
          <font>
@@ -15,5 +17,23 @@
       </Button>
       <TextArea fx:id="Notas" layoutX="18.0" layoutY="282.0" prefHeight="328.0" prefWidth="565.0" />
       <ListView fx:id="Archivos" layoutX="147.0" layoutY="29.0" prefHeight="200.0" prefWidth="439.0" />
+      <TableView fx:id="TablaNotas" layoutX="12.0" layoutY="282.0" prefHeight="328.0" prefWidth="1262.0">
+        <columns>
+          <TableColumn fx:id="Carnet" prefWidth="75.0" text="Carnet" />
+          <TableColumn fx:id="Nombre" prefWidth="75.0" text="Nombre" />
+            <TableColumn fx:id="Correo" prefWidth="75.0" text="Correo" />
+            <TableColumn fx:id="Telefono" prefWidth="75.0" text="Telefono" />
+            <TableColumn fx:id="Nick" prefWidth="75.0" text="Nickname" />
+            <TableColumn fx:id="Tipo" prefWidth="75.0" text="Tipo" />
+            <TableColumn fx:id="Examenes" prefWidth="75.0" text="Examenes" />
+            <TableColumn fx:id="Quices" prefWidth="75.0" text="Quices" />
+            <TableColumn fx:id="Tareas" prefWidth="75.0" text="Tareas" />
+            <TableColumn fx:id="Proyecto1" prefWidth="75.0" text="Proyecto 1" />
+            <TableColumn fx:id="Proyecto2" prefWidth="75.0" text="Proyecto 2" />
+            <TableColumn fx:id="Proyecto3" prefWidth="75.0" text="Proyecto 3" />
+            <TableColumn prefWidth="75.0" text="Nota final A" />
+            <TableColumn prefWidth="75.0" text="Nota final B" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
