--- a/src/main/resources/com/example/demo/Main.fxml
+++ b/src/main/resources/com/example/demo/Main.fxml
@@ -17,18 +17,18 @@
       <ListView fx:id="Archivos" layoutX="147.0" layoutY="29.0" prefHeight="200.0" prefWidth="439.0" />
       <TableView fx:id="TablaNotas" layoutX="12.0" layoutY="282.0" prefHeight="328.0" prefWidth="1137.0">
         <columns>
-          <TableColumn fx:id="Carnet" prefWidth="75.0" text="A" />
-          <TableColumn fx:id="Nombre" prefWidth="75.0" text="B" />
-            <TableColumn fx:id="Correo" prefWidth="75.0" text="C" />
-            <TableColumn fx:id="Telefono" prefWidth="75.0" text="D" />
-            <TableColumn fx:id="Nick" prefWidth="75.0" text="E" />
-            <TableColumn fx:id="Tipo" prefWidth="75.0" text="F" />
-            <TableColumn fx:id="Examenes" prefWidth="75.0" text="G" />
-            <TableColumn fx:id="Quices" prefWidth="75.0" text="H" />
-            <TableColumn fx:id="Tareas" prefWidth="75.0" text="I" />
-            <TableColumn fx:id="Proyecto1" prefWidth="75.0" text="J" />
-            <TableColumn fx:id="Proyecto2" prefWidth="75.0" text="K" />
-            <TableColumn fx:id="Proyecto3" prefWidth="75.0" text="L" />
+          <TableColumn fx:id="Carnet" prefWidth="75.0" text="Carnet" />
+          <TableColumn fx:id="Nombre" prefWidth="75.0" text="Nombre" />
+            <TableColumn fx:id="Correo" prefWidth="75.0" text="Correo" />
+            <TableColumn fx:id="Telefono" prefWidth="75.0" text="Telefono" />
+            <TableColumn fx:id="Nick" prefWidth="75.0" text="Nick" />
+            <TableColumn fx:id="Tipo" prefWidth="75.0" text="Tipo" />
+            <TableColumn fx:id="Examenes" prefWidth="75.0" text="Examenes" />
+            <TableColumn fx:id="Quices" prefWidth="75.0" text="Quices" />
+            <TableColumn fx:id="Tareas" prefWidth="75.0" text="Tareas" />
+            <TableColumn fx:id="Proyecto1" prefWidth="75.0" text="Proyecto 1" />
+            <TableColumn fx:id="Proyecto2" prefWidth="75.0" text="Poyecto 2" />
+            <TableColumn fx:id="Proyecto3" prefWidth="75.0" text="Proyecto 3" />
             <TableColumn fx:id="NotaFinalA" prefWidth="75.0" text="NotaA" />
             <TableColumn fx:id="NotaFinalB" prefWidth="75.0" text="NotaB" />
             <TableColumn fx:id="NotaFinalP" prefWidth="75.0" text="Nota Final" />
